--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -2,10 +2,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 <title>{% block title %} {% endblock title%}</title>
 </head>
 <body>
-    {% block content %} {% endblock content %}
+    <header>
+        <h1> <a href="/"> Home</a> </h1>
+    </header>
+    <div class="container">
+        {% block content %} {% endblock content %}
+    </div>
+
 </body>
 </html>
