--- a/blog/blog_master/templates/blog_master/post_detail.html
+++ b/blog/blog_master/templates/blog_master/post_detail.html
@@ -2,6 +2,14 @@
 {% block title %} Detalhe da Postagem {% endblock title %}
 {% block content %}
 
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+
 
     <div class="post-entry">
         <h2>  {{object.titulo}} </h2>
