--- a/blog/blog_master/templates/blog_master/post_new.html
+++ b/blog/blog_master/templates/blog_master/post_new.html
@@ -2,6 +2,14 @@
 {% block title %} Nova Postagem {% endblock title %}
 {% block content %}
 
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+
     <h1> Nova Postagem </h1>
 
     <form action="" method="post">
